fixed padding on navbar and hid overflow in project page

--- a/src/App.css
+++ b/src/App.css
@@ -90,6 +90,7 @@ nav{
 
 .nav-item{
   text-align: left;
+  padding: 10px
 }
 
 .nav-item:hover{
