--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -10,7 +10,7 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .back2top {
